moved UI down to prevent content from being cut off on deployed site

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 
 .block-container {
-    padding-top: 1rem;
+    padding-top: 2rem;
 }
 
 h1 {
